--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
     <mt-header></mt-header>
     <div class="content-wrapper">
         <div class="container">
-            <router-outlet></router-outlet>
+            <section class="content">
+                <router-outlet></router-outlet>
+            </section>
         </div>
     </div>
     <mt-footer></mt-footer>
