--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -4,9 +4,7 @@
 
 <section class="content">
   <section class="invoice">
-
-    {{form.value | json}}
-    <form #form="ngForm" novalidate>
+    <form [formGroup]="orderForm" novalidate>
       <div class="row">
         <div class="col-xs-12">
           <h2 class="page-header">
@@ -15,33 +13,50 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-xs-12 col-sm-9">
+          <p class="lead">Seus Dados:</p>
+        </div>
+        <div class="col-xs-12 col-sm-3">
+          <span class="help-block pull-right has-error-block" *ngIf="orderForm.hasError('emailsNotMatch')"><i class="fa fa-remove"></i> Emails não conferem</span>
+        </div>
+        <div class="col-sm-4 col-xs-12">
+          <mt-input errormsg="Campo obrigatório e no mínimo 5 caracteres" label="Nome">
+            <input type="text" class="form-control" placeholder="Nome" formControlName="name" >
+          </mt-input>
+        </div>
+        <div class="col-sm-4 col-xs-6">
+          <mt-input errormsg="E-mail invalido" label="E-mail">
+            <input type="text" class="form-control" placeholder="E-mail" formControlName="email">
+          </mt-input>
+        </div>
+        <div class="col-sm-4 col-xs-6">
+          <mt-input errormsg="E-mail invalido" label="E-mail">
+            <input type="text" class="form-control" placeholder="Confirmação do E-mail" formControlName="emailConfirmation">
+          </mt-input>
+        </div>
+      </div>
+
       <div class="row invoice-info">
         <div class="col-xs-12">
           <p class="lead">Endereço de Entrega:</p>
         </div>
         <div class="col-sm-6 col-xs-12">
-
           <mt-input errormsg="Campo obrigatório e no mínimo 5 caracteres" label="Endereço">
-            <input type="text" class="form-control" placeholder="Endereço" name="endereco" ngModel required
-              minlength="5" autocomplete="off">
+            <input type="text" class="form-control" placeholder="Endereço" formControlName="address">
           </mt-input>
-
         </div>
         <div class="col-sm-2 col-xs-6">
-
           <mt-input errormsg="Obrigatório números" label="Número">
-            <input type="text" class="form-control" placeholder="Número" pattern="^[0-9]*$" name="numero" ngModel
-              required min="1" max="99999" maxlength="5" autocomplete="off">
+            <input type="text" class="form-control" placeholder="Número"  formControlName="number">
           </mt-input>
-
         </div>
         <div class="col-sm-4 col-xs-6">
-          <div class="form-group" [class.has-success]="cInput.dirty">
+          <div class="form-group">
             <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> Complemento</label>
-            <input type="text" class="form-control" id="inputSuccess" placeholder="Complemento" #cInput="ngModel"
-              ngModel name="complemento" autocomplete="off">
-            <span class="help-block" *ngIf="!cInput.valid && !(cInput.dirty || cInput.touched)"><i
-                class="fa fa-remove"></i> Help block with error</span>
+            <input type="text" class="form-control" id="inputSuccess" placeholder="Complemento" formControlName="complemento">
+            <!-- <span class="help-block" *ngIf="!complemento.valid && !(complemento.dirty || cInput.touched)"><i
+                class="fa fa-remove"></i> Help block with error</span> -->
           </div>
 
         </div>
@@ -54,7 +69,8 @@
         <div class="col-xs-12">
           <p class="lead">Itens do Pedido:</p>
         </div>
-        <mt-order-items [items]="cartItems()" (increase)="increaseQty($event)" (decrease)="decreaseQty($event)" (remove)="remove($event)"></mt-order-items>
+        <mt-order-items [items]="cartItems()" (increase)="increaseQty($event)" (decrease)="decreaseQty($event)"
+          (remove)="remove($event)"></mt-order-items>
         <!-- /.col -->
       </div>
       <!-- /.row -->
@@ -65,32 +81,14 @@
           <p class="lead">Formas de Pagamento:</p>
 
           <div class="form-group">
-            <mt-radio [options]="options" name="options" ngModel></mt-radio>
+            <mt-radio [options]="options" name="options" formControlName="paymentOption"></mt-radio>
           </div>
 
         </div>
         <!-- /.col -->
         <div class="col-sm-6 col-xs-12">
           <p class="lead">Frete e Total:</p>
-
-          <div class="table-responsive">
-            <table class="table">
-              <tbody>
-                <tr>
-                  <th style="width:50%">Itens:</th>
-                  <td class="text-right">R$ 20,00</td>
-                </tr>
-                <tr>
-                  <th>Frete:</th>
-                  <td class="text-right">R$ 8,00</td>
-                </tr>
-                <tr>
-                  <th>Total:</th>
-                  <td class="text-right">R$ 28,00</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+          <mt-delivery-costs [delivery]="delivery" [itemsValue]="itemsValue()"></mt-delivery-costs>
         </div>
         <!-- /.col -->
       </div>
@@ -99,7 +97,8 @@
 
     <div class="row">
       <div class="col-xs-12">
-        <button class="btn btn-success pull-right" [disabled]="!form?.valid"><i class="fa fa-credit-card"></i> Concluir
+        <button class="btn btn-success pull-right" (click)="checkOrder(orderForm.value)"
+          [disabled]="!orderForm?.valid || cartItems().length === 0"><i class="fa fa-credit-card"></i> Concluir
           Pedido
         </button>
       </div>
